* バインディング周辺追記 * シリアル受信周辺追記

--- a/DMX512Reciever/DMX512Reciever/DMX512Reciever.csproj
+++ b/DMX512Reciever/DMX512Reciever/DMX512Reciever.csproj
@@ -54,7 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
+    <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -63,8 +63,11 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Common\DelegateCommand.cs" />
+    <Compile Include="Common\Serial_func.cs" />
     <Compile Include="Common\ViewModelBase.cs" />
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="Model\DMX512.cs" />
+    <Compile Include="ViewModel\MainWindowViewModel.cs" />
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -95,10 +98,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model\" />
-    <Folder Include="ViewModel\" />
-    <Folder Include="View\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
